# PyCLM

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CLAUDE.md  PositionList.pos  README.md  SampleExperiment.toml  _yin_yang_script.py  log.txt  main.py  multipoints.csv  noxfile.py  pyclm_config.toml  pyproject.toml  requirements.txt  test.hdf5
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml
PyCLM/: __init__.py
PyCLM/src/: __init__.py  experiments.py
documentation/: conf.py  custom_pattern_methods.md  experiment_tomls.md  first_time_setup.md  index.rst  installation.md  method_zoo.md  usage.md
documentation/api/: bar_patterns.rst  cell_intensity_patterns.rst  fbc_cell_movement.rst  feedback_control_patterns.rst  fly_patterns.rst  index.rst  ktr_patterns.rst  pattern_base.rst  static_patterns.rst  wave_patterns.rst
documentation/ext/: zoo_gallery.py
documentation/zoo_sources/: fly.tif  fly_seg.tif  mcf10a.tif  mcf10a_seg.tif  mdck.tif  mdck_seg.tif  metadata.toml
experiments/: SampleExperiment.toml  SampleExperiment2.toml
figures/: bar_speed_analysis.ipynb  cell_movement_vis.ipynb  mdck_rotational_movement.ipynb  mdck_vertical_movement.ipynb  mdck_vertical_movement_2.ipynb  movies.ipynb  supplementary_figs.ipynb  tag-rfp_analysis.ipynb  vortex_analysis.ipynb
notebooks/: analysis.ipynb  analysis.py  barbounce.ipynb  cell_movement_vis.ipynb  check_balance.ipynb  log.txt  tag-rfp_analysis.ipynb  test.ipynb  test_spots.ipynb  umm_test.ipynb  vortex_analysis.ipynb
notebooks/.ipynb_checkpoints/: umm_test-checkpoint.ipynb
on_off_experiment/: multipoints.xml  off.toml  on.10.hdf5  on.11.hdf5  on.toml
pyclm/: convert_hdf5s.py
scripts/: calibration.ipynb  cell_direction.py  ellipse_box_pattern.py  matteo_embryo_run_script2.py  matteo_embryo_run_script3(caps only, works).py  matteo_embryo_run_script3.py  matteo_embryo_run_script4(to be fixed).py  matteo_embryo_run_script4.py  matteo_embryo_run_script5.py  matteo_working_script.py  multi1.py  process_ktr.py  process_nd2.py  segment_and_track.py  segment_and_track_jt.py
src/: __init__.py  controller.py  convert_hdf5s.py  datatypes.py  events.py  experiments.py  manager.py  messages.py  microscope.py  queues.py  utils.py
tests/: PositionList.pos  test_base_process.py  test_dry_run.py  test_import_pyclm.py  test_swmr.py
tif-source/: NCEmbryo12_NC9M.tif  NCEmbryo28_NC9M.tif  NCEmbryo29_NC9M.tif  NCEmbryo6_NC9M.tif  image_positions.yaml
(+91 files in other folders)
