[project]
name = "PyCLM"
version = "0.1.0"
description = "Closed-loop feedback control for optogenetic microscopy in Python"
readme = "README.md"
authors = [
    { name = "Harrison-Oatman", email = "ho6729@princeton.edu" }
]
requires-python = ">=3.13"
dependencies = [
    "cellpose>=4.0.6",
    "h5py>=3.14.0",
    "natsort>=8.4.0",
    "pandas-stubs==2.3.2.250827",
    "pymmcore-plus>=0.16.0",
    "scikit-image>=0.25.2",
    "tifffile>=2025.9.20",
    "toml>=0.10.2",
]

[dependency-groups]
analysis = [
    "laptrack>=0.17.0",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "tqdm>=4.67.1",
]

dev = [
    "pytest>=8.4.2",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
