[project]
name = "PyCLM"
version = "0.1.0"
description = "Closed-loop feedback control for optogenetic microscopy in Python"
readme = "README.md"
authors = [
    { name = "Harrison-Oatman", email = "ho6729@princeton.edu" }
]
requires-python = ">=3.11"
dependencies = [
    "cellpose>=4.0.6",
    "h5py>=3.14.0",
    "natsort>=8.4.0",
    "notebook>=7.5.1",
    "pandas-stubs==2.3.2.250827",
    "pymmcore-plus==0.13.7",
    "pymmcore==11.2.1.71.0",
    "scikit-image>=0.25.2",
    "tifffile>=2025.9.20",
    "toml>=0.10.2",
    "torch",
    "torchvision",
]

[dependency-groups]
analysis = [
    "laptrack>=0.17.0",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "tqdm>=4.67.1",
]
calibration = [
    "pycromanager>=1.0.2",
]

dev = [
    "pytest>=8.4.2",
]

#[tool.uv]
#required-environments = [
#    "sys_platform == 'x86_64'",
#]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu121" },
]
torchvision = [
    { index = "pytorch-cu121" },
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[project.scripts]
pyclm = "pyclm.__main__:main"
convert_hdf5s = "pyclm.convert_hdf5s:main"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
